# scrappy-core

./: default.nix  henforcer.toml  scrappy-core.cabal  shell-call.nix  shell.nix  shell2.nix
src/Scrappy/: Elem.hs  Files.hs  Find.hs  Links.hs  Scrape.hs  Types.hs
src/Scrappy/Elem/: ChainHTML.hs  ElemHeadParse.hs  ITextElemParser.hs  SimpleElemParser.hs  TreeElemParser.hs  Types.hs
test/: Main.hs  TestUtils.hs
test/Fixtures/: links.html  malformed.html  nested.html  simple.html
test/Scrappy/: FindSpec.hs  LinksSpec.hs  LinksSpec.hs.disabled  RoundtripInnerSpec.hs  RoundtripSpec.hs  ScrapeSpec.hs  ScrapeSpec.hs.disabled  TypesSpec.hs
test/Scrappy/Elem/: ChainHTMLSpec.hs  ContainsSpec.hs  ElemHeadParseSpec.hs  ElemHeadParseSpec.hs.disabled  ITextElemParserSpec.hs  SimpleElemParserSpec.hs  TreeElemParserSpec.hs  TypesSpec.hs
