cabal-version:       2.4
name:                scrappy-core
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.1
synopsis:            html pattern matching library and high-level interface concurrent requests lib for webscraping
description:
        Scrappy is meant to be a fully expressive library for all aspects of webscraping.
        In this sense it is meant to be as undetectable as using Selenium but with a design
        specifically for webscraping (where Selenium was never intended for webscraping nor do
        it's maintainers seek to provide features that allow for more expressive scraping if it
        would not help testing). The Elem.* modules provide a wide range of expressive pattern matching
        functions while adding no more complexity in needing to learn this library over parsing.
        .
        In addition to expressive patterns to fit your specific patterns you hope to scrape, scrappy
        provides helper functions for complex control flows such as running multiple different
        parser-scrapers on respective sites based on a rotating ConcurrentStream when users have many
        target sites that they can rotate working on to not overload a given site and thus avoid detection
        .
        For simpler control flows such as scraping a large number of pages on a single site, scrappy currently
        provides functions like getHtml, which not only is a super simple interface to http requests,
        but a persistent function that gurantees retrieval of the HTML document to be scraped
        .
        This package is labelled as uncurated, and so suggestions are very much welcome and this package is
        expected to grow based on feedback. The primary focus will be on running Javascript to allow for greater
        access to information on sites

-- URL for the project homepage or repository.
homepage:            https://github.com/Ace-Interview-Prep/scrappy
license:             BSD-3-Clause
license-file:        LICENSE
author:              Galen Sprout
maintainer:          galen.sprout@gmail.com
bug-reports:         https://github.com/Ace-Interview-Prep/scrappy/issues
x-curated:           uncurated-seeking-adoption
stability:           Experimental
category:            Webscraping
build-type:          Simple
extra-source-files:  README.MD
library
  exposed-modules:    Scrappy.Find
                    , Scrappy.Scrape
                    , Scrappy.Elem
                    , Scrappy.Elem.Types
                    , Scrappy.Elem.TreeElemParser
                    , Scrappy.Elem.SimpleElemParser
                    , Scrappy.Elem.ElemHeadParse
                    , Scrappy.Elem.ITextElemParser
                    , Scrappy.Elem.ChainHTML
                    , Scrappy.Links
                    , Scrappy.Types

  build-depends:       base >=4.19.0 && <5
                     , aeson >=2.2.3 && <2.3
                     , bytestring >=0.12.2 && <0.13
                     , containers >=0.7 && <0.8
                     , lens >=5.3.5 && <5.4
                     , modern-uri >=0.3.6 && <0.4
                     , network-uri >=2.6.4 && <2.7
                     , parsec >=3.1.18 && <3.2
                     , parser-combinators >=1.3.0 && <1.4
                     , text >=2.1.3 && <2.2
                     , transformers >=0.6.1 && <0.7
                     
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

test-suite scrappy-core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Scrappy.Elem.SimpleElemParserSpec
                     , Scrappy.Elem.TreeElemParserSpec
                     , TestUtils
  build-depends:       base
                     , scrappy-core
                     , hspec >= 2.7 && < 3
                     , QuickCheck >= 2.14 && < 3
                     , parsec
                     , containers
                     , filepath
                     , directory
  build-tool-depends:  hspec-discover:hspec-discover >= 2.7 && < 3
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
